--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,8 +1,56 @@
 .app-bar {
   background-color: white;
   color: #000000;
-  margin-top: 120.5px;
+  margin-top: 48px;
+  margin-bottom: 0px;
+  /* margin-top: 120.5px; */
   /* width: min-content; */
   /* position: static;
   height: 10vh; */
+}
+.menu-icon {
+  position: relative;
+  left: 380px;
+  right: 0px;
+}
+.logo-div-img {
+  width: 70px;
+  height: 10vh;
+}
+.logo-img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+@media (max-width: 768px) {
+  .app-bar {
+    margin-top: 0px;
+  }
+  .logo-div-img {
+    width: 55px;
+    height: 8vh;
+    margin-left: -50px;
+    margin-right: 0px;
+  }
+  .menu-icon {
+    position: relative;
+    left: 400px;
+    right: 0px;
+  }
+}
+@media (max-width: 480px) {
+  .app-bar {
+    margin-top: 0px;
+  }
+  .logo-div-img {
+    width: 55px;
+    height: 8vh;
+    margin-left: -50px;
+    margin-right: 0px;
+  }
+  .menu-icon {
+    position: relative;
+    left: 300px;
+    right: 0px;
+  }
 }
