--- a/src/components/HeroSection/Heros.css
+++ b/src/components/HeroSection/Heros.css
@@ -1,6 +1,6 @@
 /* Example CSS for the Hero component */
 .hero {
-  margin-top: 70px;
+  margin-top: 0px;
   position: relative;
   height: 100vh;
   overflow: hidden;
@@ -9,6 +9,9 @@
 .hero-slide {
   width: 100%;
   height: 100vh;
+  overflow: hidden; /* Hide any image overflow */
+  position: relative;
+  /* background: linear-gradient(pink, orange, purple); */
 }
 .hero-slide img {
   width: 100%;
@@ -23,13 +26,81 @@
   text-align: center;
   color: #fff;
   z-index: 1;
+}
+.hero-content h1 {
+  font-size: 60px;
+  font-weight: 700;
+  /* font-style: italic; */
+  color: #e53238;
+  /* margin-bottom: 1rem; */
+}
+.read-btn {
+  border-radius: 2px solid;
+  background: linear-gradient(rgb(130, 0, 39), #d63d0e);
+  /* font-size: medium; */
+  text-align: center;
+  width: 200px;
+  height: 8vh;
+  display: flex;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  color: white;
+  margin-top: 30px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.btn-read {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: white;
+}
+.hero-content h2 {
+  font-size: 40px;
 
-  h1 {
-    font-size: 3rem;
-    margin-bottom: 1rem;
+  margin-left: auto;
+  margin-right: auto;
+  font-weight: 700;
+  color: #e53238;
+}
+@media (max-width: 1200px) {
+  .hero-content h1 {
+    font-size: xx-large;
+    font-weight: 700;
+    /* font-style: italic; */
+    color: #e53238;
+    /* margin-bottom: 1rem; */
   }
+  .hero-content h2 {
+    font-size: xx-large;
 
-  p {
-    font-size: 1.5rem;
+    margin-left: auto;
+    margin-right: auto;
+    font-weight: 700;
+    color: #e53238;
+  }
+}
+@media (max-width: 768px) {
+  .hero {
+    margin-top: -50px;
+  }
+}
+@media (max-width: 480px) {
+  .hero {
+    margin-top: -50px;
+  }
+  .hero-slide {
+    width: 100%;
+    height: 100vh;
+    overflow: none; /* Hide any image overflow */
+    position: none;
+    /* background: linear-gradient(pink, orange, purple); */
+  }
+  .hero-slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 }
