--- a/src/components/Registerwithus/Register.css
+++ b/src/components/Registerwithus/Register.css
@@ -49,6 +49,10 @@
   text-align: center;
   align-content: center;
 }
+.register-border button:hover {
+  background-color: green;
+  border-color: greenyellow;
+}
 @media (max-width: 1200px) {
   .register-display-div {
     flex-wrap: wrap;
