--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -9,9 +9,10 @@
   height: 10vh; */
 }
 .menu-icon {
-  position: relative;
-  left: 380px;
-  right: 0px;
+  display: none;
+}
+.header-icon-btn {
+  display: none;
 }
 .logo-div-img {
   width: 70px;
@@ -21,6 +22,14 @@
   width: 100%;
   height: 100%;
   object-fit: contain;
+}
+@media (max-width: 968px) {
+  .menu-icon {
+    display: flex;
+    position: relative;
+    left: 380px;
+    right: 0px;
+  }
 }
 @media (max-width: 768px) {
   .app-bar {
