--- a/src/components/About-Us/AboutUs.css
+++ b/src/components/About-Us/AboutUs.css
@@ -1,5 +1,5 @@
 .about {
-  background: url("../../assets/images/buildi.jpeg") no-repeat left;
+  background: url("../../assets/images/cso.jpeg") no-repeat left;
   background-size: 55%;
   background-color: #fdfdfd;
   overflow: hidden;
